--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         <p></p>
       </footer>
     </div>
-    <script type="module" src="main.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
